feat: crud works correctly