@@ -2,6 +2,7 @@ package com.example.palisis.infrastructure.exception.error;
 
 import com.example.palisis.infrastructure.exception.CustomIllegalArgumentException;
 import com.example.palisis.infrastructure.exception.ResourceNotFoundException;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
@@ -10,34 +11,39 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<Object> handlePriceNotFoundException(ResourceNotFoundException ex) {
-        return buildErrorResponse(HttpStatus.NOT_FOUND, ex.getMessage());
+    public ResponseEntity<Object> handleResourceNotFoundException(ResourceNotFoundException ex) {
+        log.warn("Resource not found: {}", ex.getMessage());
+        return buildErrorResponse(HttpStatus.NOT_FOUND, "The requested resource was not found. " + ex.getMessage());
     }
 
     @ExceptionHandler(CustomIllegalArgumentException.class)
-    public ResponseEntity<Object> handlePriceApplicationException(CustomIllegalArgumentException ex) {
-        return buildErrorResponse(HttpStatus.BAD_REQUEST, ex.getMessage());
+    public ResponseEntity<Object> handleCustomIllegalArgumentException(CustomIllegalArgumentException ex) {
+        log.warn("Bad request: {}", ex.getMessage());
+        return buildErrorResponse(HttpStatus.BAD_REQUEST, "Invalid arguments provided: " + ex.getMessage());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Object> handleValidationExceptions(MethodArgumentNotValidException ex) {
         List<String> errorMessages = ex.getBindingResult().getAllErrors().stream()
+                .filter(FieldError.class::isInstance)
                 .map(error -> ((FieldError) error).getField() + ": " + error.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
+        log.warn("Validation failed: {}", String.join(", ", errorMessages));
         return buildErrorResponse(HttpStatus.BAD_REQUEST,
                 "Validation failed for fields: " + String.join(", ", errorMessages));
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<Object> handleRepositoryException(Exception ex) {
-        return buildErrorResponse(HttpStatus.INTERNAL_SERVER_ERROR, ex.getMessage());
+    public ResponseEntity<Object> handleGenericException(Exception ex) {
+        log.error("An unexpected error occurred: ", ex);
+        return buildErrorResponse(HttpStatus.INTERNAL_SERVER_ERROR, "An unexpected error occurred. " + ex.getMessage());
     }
 
     private ResponseEntity<Object> buildErrorResponse(HttpStatus status, String message) {
